--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@ nav {
   margin: 10px 10px 50px 10px;
   flex-wrap: wrap;
   gap: 25px;
+  align-items: center;
 }
 
 .CatsContent > div {
@@ -149,6 +150,12 @@ nav {
   background-color: var(--secondary);
   flex-basis: 30%;
   height: 300px;
+}
+
+.landscape {
+  background-color: var(--secondary);
+  flex-basis: 50% !important;
+  height: auto !important;
 }
 
 .DogsContent {
@@ -180,9 +187,8 @@ nav {
 
 .DogsContent > img {
   background-color: var(--secondary);
-  flex-basis: 30%;
-  height: 300px;
-  width: 450px;
+  flex-basis: 60%;
+  width: 60%;
 }
 
 .stateContent {
@@ -241,13 +247,14 @@ ul {
   text-align: start;
 }
 
-a {
-  color: var(--primary);
+a,
+a:visited {
+  color: white;
 }
 
 a:hover {
-  color: var(--quaternary);
-  background-color: var(--primary);
+  color: var(--secondary);
+  background-color: var(--tertiary);
 }
 
 footer {
@@ -257,7 +264,7 @@ footer {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: var(--primary);
+  background-color: var(--secondary);
   color: var(--secondary);
   font-size: 3vh;
   bottom: 0;
